--- a/appspec.yml
+++ b/appspec.yml
@@ -1,15 +1,28 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
     destination: /home/ec2-user/Simplybyte_calculator-new
+    overwrite: true
+
 hooks:
-  
   BeforeInstall:
-    - location: scripts/install.sh
+    - location: scripts/before_install.sh
       timeout: 300
       runas: ec2-user
+
   AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: ec2-user
+
+  ApplicationStart:
     - location: scripts/start.sh
+      timeout: 300
+      runas: ec2-user
+
+  ApplicationStop:
+    - location: scripts/stop.sh
       timeout: 300
       runas: ec2-user
